# image-parser-cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
include/: Image.h  Image.hpp  ImageFactory.h  ImageParser.hpp  bmpImage.h  jpegImage.h  pngImage.h  pngParser.hpp
include/image/: pixel.h
include/utils/: CLI.hpp  ImageUtils.hpp  Logger.hpp
src/: Image.cpp  ImageFactory.cpp  bmpImage.cpp  jpegImage.cpp  pngImage.cpp  pngParser.cpp
src/utils/: CLI.cpp  ImageUtils.cpp  Logger.cpp
